--- a/app/src/main/res/layout/mylayout.xml
+++ b/app/src/main/res/layout/mylayout.xml
@@ -18,7 +18,7 @@
             android:id="@+id/textView1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:text="TextView" />
 
